[tool.poetry]
name = "pin_maker"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
fastapi = "^0.75.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
pydantic = "^1.9.0"
Pillow = "^9.0.1"
requests = "^2.27.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
