[tool.poetry]
name = "pin_maker"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
requests = "^2.27.1"
lxml = "^4.8.0"
moviepy = "^1.0.3"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
selenium = "^4.15.2"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pillow = "^10.1.0"
loguru = "^0.7.2"
pb-admin = {git = "https://github.com/vcslav-v/pb_admin.git", rev = "main"}
boto3 = "^1.29.7"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
